site code complete, css updated, site uploaded.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Portfolio Website-Brad</title>
+  <title>Jordan Hunt's Portfolio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- linking css file -->
@@ -16,7 +16,7 @@
 <body>
   <nav class="navbar navbar-expand-lg fixed-top navbarScroll">
     <div class="container ">
-        <a class="navbar-brand text-light" href="#">Jordan</a>
+        <!-- <a class="navbar-brand text-light" href="#">Jordan</a> -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -59,8 +59,8 @@
   <div class="container mt-4 pt-4">
       <h1 class="text-center">About Me</h1>
       <div class="row mt-4">
-          <div class="col-lg-4">
-              <img src="images/me.jpg" class= "imageAboutPage" alt="">
+          <div class="col-lg-4 col-md-12">
+              <img src="images/me.jpg" class= "imageAboutPage centerMeMobile"alt="A picture of Jordan Hunt">
           </div>
 
           <div class="col-lg-8">
@@ -69,14 +69,14 @@
                       <ul>
                           <li>Name: Jordan Hunt</li>
                           <li>Age: 34</li>
-                          <li>Occupation: Web Developer</li>
+                          <li>Occupation: Developer</li>
 
                       </ul>
                   </div>
                   <div class="col-md-6">
                       <ul>
                           <li>Location: Niagara Region</li>
-                          <li>Languages: HTML, CSS, Boostrap, C#, Javascript</li>
+                          <li>Languages: CSS, Bootstrap, C#, Javascript, Python,  SQL</li>
                           <li>Hobbies: Cooking, Gardening, Fantasy Hockey</li>
 
                       </ul>
@@ -105,7 +105,7 @@
                   <div class="card-body">
                       <i class="fas servicesIcon fa-clock"></i>
                       <h4 class="card-title mt-3">Website Development</h4>
-                      <p class="card-text mt-3">From what you see and what happens behind the curtains. I am able to create full stack solutions to fit your needs and to make your life easier.  
+                      <p class="card-text mt-3">From what you see to what happens behind the curtains. I am able to create full stack solutions to fit your needs and to make your life easier.    
                       </p>
                   </div>
               </div>  
@@ -115,8 +115,7 @@
                   <div class="card-body">
                       <i class='fas servicesIcon fa-layer-group'></i>
                       <h4 class="card-title mt-3">Website Design</h4>
-                      <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
-                          Some quick example text to build on the card title and make up the bulk of the card's content.
+                      <p class="card-text mt-3">Able to design visually appealing and user friendly designs.  Websites and applications should be visually appealing and functional, not one or the other.
                       </p>
                   </div>
               </div>  
@@ -125,10 +124,9 @@
           <div class="col-lg-4 mt-4">
               <div class="card servicesText">
                   <div class="card-body">
-                      <i class='far servicesIcon fa-check-circle'></i>
-                      <h4 class="card-title mt-3">Website Deployment</h4>
-                      <p class="card-text mt-3">Some quick example text to build on the card title and make up the bulk of the card's content.
-                          Some quick example text to build on the card title and make up the bulk of the card's content.
+                      <i class='servicesIcon fas fa-graduation-cap'></i>
+                      <h4 class="card-title mt-3">Versitility</h4>
+                      <p class="card-text mt-3">Through my education and professional experience I have a large toolkit at my disposal to solve problems.  
                       </p>
                   </div>
               </div>  
@@ -142,7 +140,7 @@
                       <i class='servicesIcon fas fa-comments'></i>
                       <h4 class="card-title mt-3">Communication</h4>
                       <p class="card-text mt-3">I believe my business background sets me a part.  
-                        I am able to effectively communicate plans, concerns to project leaders and I am comfortable working with clients.
+                        I am able to effectively communicate in a professional manner with others and I am comfortable working with clients.
                       </p>
                   </div>
               </div>  
@@ -183,9 +181,9 @@
                   <img class="card-img-top" src="images/portfolioImage1.jpg" alt="Card image" style="width:100%">
                   <div class="card-body">
                       <h4 class="card-title">Coding Challenges</h4>
-                      <p class="card-text">Coding challenges I have completed in my spare time.</p>
+                      <p class="card-text">Coding challenges I have completed in my spare time. Various levels of difficulties in this repository.</p>
                       <div class="text-center">
-                          <a href="https://github.com/johunt89/Codewars" class="btn btn-success">Link</a>
+                          <a href="https://github.com/johunt89/Codewars" class="btn btn-success">See repository</a>
                       </div>
                   </div>
               </div>
@@ -195,10 +193,10 @@
               <div class="card portfolioContent">
                   <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
                   <div class="card-body">
-                      <h4 class="card-title">Quiz App</h4>
-                      <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                      <h4 class="card-title">Emma's Small Engines</h4>
+                      <p class="card-text">Fully functional front end POS. Used front end JS to mimic a database</p>
                       <div class="text-center">
-                          <a href="#" class="btn btn-success">Link</a>
+                          <a href="https://github.com/johunt89/Emma-s-Small-Engines" class="btn btn-success">See repository</a>
                       </div>
                   </div>
               </div>
@@ -208,10 +206,10 @@
               <div class="card portfolioContent">
                   <img class="card-img-top" src="images/portfolioImage3.jpg" alt="Card image" style="width:100%">
                   <div class="card-body">
-                      <h4 class="card-title">Product Landing Page</h4>
-                      <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                      <h4 class="card-title">MVC Application</h4>
+                      <p class="card-text">Full stack MVC application that stores various user data through different pages and tables.</p>
                       <div class="text-center">
-                          <a href="#" class="btn btn-success">Link</a>
+                          <a href="https://github.com/johunt89/MVC-Music-App" class="btn btn-success">See repository</a>
                       </div>
                   </div>
               </div>
@@ -223,24 +221,24 @@
               <div class="card portfolioContent">
                   <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
                   <div class="card-body">
-                      <h4 class="card-title">Messaging Service</h4>
-                      <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                      <h4 class="card-title">Webform Application</h4>
+                      <p class="card-text">Full stack webform application with full CRUD operations.</p>
                       <div class="text-center">
-                          <a href="#" class="btn btn-success">Link</a>
+                          <a href="https://github.com/johunt89/Fullstack-Webform-Application" class="btn btn-success">See repository</a>
                       </div>
                   </div>
               </div>
           </div>
 
-          <div class="col-lg-4 mt-4">
-              <div class="card portfolioContent">
-                  <img class="card-img-top" src="images/portfolioImage1.jpg" alt="Card image" style="width:100%">
+          <div class="col-lg-4 mt-4" >
+              <div class="card portfolioContent" id="privateClient">
+                  <img class="card-img-top" src="images/mvcApp.jpg" alt="Card image" style="width:100%">
                   <div class="card-body">
-                      <h4 class="card-title">Twitter Clone</h4>
-                      <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                      <div class="text-center">
+                      <h4 class="card-title">Client MVC Application</h4>
+                      <p class="card-text">A fullstack MVC application to manage their inventory in the Niagara region. Multiple pages managing inventory, locations, events, user permissions. Private client, unable to share repository publicly.</p>
+                      <!--<div class="text-center">
                           <a href="#" class="btn btn-success">Link</a>
-                      </div>
+                      </div>-->
                   </div>
               </div>
           </div>
@@ -249,10 +247,10 @@
               <div class="card portfolioContent">
                   <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
                   <div class="card-body">
-                      <h4 class="card-title">Blog App</h4>
-                      <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                      <h4 class="card-title">WebApi with CRUD operations</h4>
+                      <p class="card-text">Created a WebApi with full CRUD operations, UWP app for the WebApi included in this repository as well</p>
                       <div class="text-center">
-                          <a href="#" class="btn btn-success">Link</a>
+                          <a href="https://github.com/johunt89/Team-WebApi" class="btn btn-success">See repository</a>
                       </div>
                   </div>
               </div>
@@ -265,13 +263,13 @@
   <div class="container mt-3 contactContent">
       <h1 class="text-center">Contact Me</h1>
 
-      <div class="row mt-4">
-          <div class="col-lg-6">
+      <div class="row mt-4 ">
+          <div class="col-lg-6 col-md-12" id="mapDiv">
               <!-- to edit google map goto https://www.embed-map.com type your location, generate html code and copy the html  -->
-              <div style="text-decoration:none; overflow:hidden;max-width:100%;width:500px;height:500px;">
-                <div id="google-maps-display" style="height:100%; width:100%;max-width:100%;">
+              <div id="mapDiv" style="text-decoration:none; overflow:hidden;max-width:100%;height:500px; width:500px;">
+                <div id="google-maps-display" style="height:80%; width:100%;max-width:100%;">
                   <iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=St.+Catharines&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe>
-                </div><a class="the-googlemap-enabler" href="https://kbj9qpmy.com/hrn" id="get-data-for-map">InMotion Hosting</a>
+                </div><a class="the-googlemap-enabler" href="https://kbj9qpmy.com/hrn" id="get-data-for-map"></a>
                 <style>#google-maps-display img{max-width:none!important;background:none!important;font-size: inherit;font-weight:inherit;}</style>
               </div>
           </div>
@@ -286,7 +284,7 @@
                   <div class="mb-3 mt-3">
                       <textarea class="form-control" rows="5" id="comment" name="message" placeholder="Project Details"></textarea>
                   </div>
-                  <button type="submit" class="btn btn-success mt-3">Contact Me</button>
+                  <button type="submit" class="btn btn-success d-grid gap-2 col-4 mx-auto contactSubmit">Contact Me</button>
               </form>
               
               
@@ -303,6 +301,7 @@
       <div class="social-icons mt-4">
           <a href="https://twitter.com/ProbablyJordan4" target="_blank"><i class="fab fa-twitter"></i></a>
           <a href="https://www.linkedin.com/in/jordan-hunt-24094524/" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/johunt89" target="_blank"><i class="fab fa-github"></i></a>
       </div>
   </div>
 </footer>
