--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- linking css file -->
   <link rel="stylesheet" href="style.css">
+  <!--devicon-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">  
   <!-- bootstrap CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- font awesome -->
   <script src="https://kit.fontawesome.com/31149d48b0.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/a55ef591fb.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -27,6 +30,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light" href="#about">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-light" href="#languages">Languages</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light" href="#services">Services</a>
@@ -69,16 +75,14 @@
                       <ul>
                           <li>Name: Jordan Hunt</li>
                           <li>Age: 34</li>
-                          <li>Occupation: Developer</li>
+
 
                       </ul>
                   </div>
                   <div class="col-md-6">
                       <ul>
                           <li>Location: Niagara Region</li>
-                          <li>Languages: CSS, Bootstrap, C#, Javascript, Python,  SQL</li>
-                          <li>Hobbies: Cooking, Gardening, Fantasy Hockey</li>
-
+                          <li>Occupation: Developer</li>
                       </ul>
                   </div>
               </div>
@@ -88,13 +92,72 @@
                     Computers have always been a big interest and hobby for me. I have always been interested in how things work. 
                     When MySpace was the big social media thing I found myself digging in to figure out how to have the coolest looking profile possible (I was really cool). 
                     After graduating from college the first time I spent many years managing hardware & software repair businesses. 
-                    I think with my work experience and knowledge I have a unique perspective that will enable me to be successful in my transition to a new career. 
+                    I believe with my work experience and knowledge I have a unique perspective and would be an asset to any team or project you may have.
                   </p>
               </div>
           </div>
       </div>
 </section>
 
+<!-- languages section-->
+<section id="languages">
+    <div class="container">
+        <h1 class="text-center">Languages & Frameworks</h1>
+        <div class="row">
+            <div class="col-lg-3 col-md-6 mt-4">
+                    <div class="card-body">
+                        <i class="fa-brands languagesIcon  devicon-html5-plain"></i>
+                        <h4 class="card-title mt-3">HTML</h4>
+                    </div>
+            </div>
+            <div class="col-lg-3 col-md-6 mt-4">
+                <div class="card-body">
+                    <i class="fa-brands languagesIcon fa-css3-alt"></i>
+                    <h4 class="card-title mt-3">CSS</h4>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 mt-4">
+                <div class="card-body">
+                    <i class="fa-brands languagesIcon fa-square-js"></i>
+                    <h4 class="card-title mt-3">Javascript</h4>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 mt-4">
+                <div class="card-body">
+                    <i class="fa-brands languagesIcon fa-bootstrap"></i>
+                    <h4 class="card-title mt-3">Bootstrap</h4>
+                </div>
+            </div>        
+        </div>
+        <div class="row">
+            <div class="col-lg-3 col-md-6 mt-4">
+                <div class="card-body">
+                    <i class="fa-brands languagesIcon devicon-csharp-plain"></i>
+                    <h4 class="card-title mt-3">C#</h4>
+                </div>
+            </div>
+            
+            <div class="col-lg-3 col-md-6 mt-4">
+                <div class="card-body">
+                    <i class="fa-brands languagesIcon devicon-python-plain"></i>
+                    <h4 class="card-title mt-3">Python</h4>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 mt-4">
+                <div class="card-body">
+                    <i class="fa-brands languagesIcon devicon-microsoftsqlserver-plain"></i>
+                    <h4 class="card-title mt-3">SQL</h4>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6 mt-4">
+                <div class="card-body">
+                    <i class="fa-brands languagesIcon devicon-dotnetcore-plain"></i>
+                    <h4 class="card-title mt-3">.Net Framework</h4>
+                </div>
+            </div>
+        </div>
+    </div>
+  </section>
 <!-- services section-->
 <section id="services">
   <div class="container">
@@ -266,7 +329,7 @@
       <div class="row mt-4 ">
           <div class="col-lg-6 col-md-12" id="mapDiv">
               <!-- to edit google map goto https://www.embed-map.com type your location, generate html code and copy the html  -->
-              <div id="mapDiv" style="text-decoration:none; overflow:hidden;max-width:100%;height:500px; width:500px;">
+              <div id="mapDiv" style="text-decoration:none; overflow:hidden;max-width:100%;height:30rem; width:50rem;">
                 <div id="google-maps-display" style="height:80%; width:100%;max-width:100%;">
                   <iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=St.+Catharines&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe>
                 </div><a class="the-googlemap-enabler" href="https://kbj9qpmy.com/hrn" id="get-data-for-map"></a>
@@ -282,7 +345,7 @@
                   <input type="email" name="email" class="form-control mt-3" placeholder="Email">
                   <input type="text"  name="subject" class="form-control mt-3" placeholder="Subject">
                   <div class="mb-3 mt-3">
-                      <textarea class="form-control" rows="5" id="comment" name="message" placeholder="Project Details"></textarea>
+                      <textarea class="form-control" rows="5" id="comment" name="message" placeholder="Type your message here"></textarea>
                   </div>
                   <button type="submit" class="btn btn-success d-grid gap-2 col-4 mx-auto contactSubmit">Contact Me</button>
               </form>
