added nav bar highlighting

--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
         </button>
         <div class="collapse navbar-collapse " id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item active ">
+                <li class="nav-item active hvr-underline-from-center">
                     <a class="nav-link text-light" href="#home">Home</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item hvr-underline-from-center">
                     <a class="nav-link text-light" href="#about">About</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item hvr-underline-from-center">
                     <a class="nav-link text-light" href="#languages">Languages</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item hvr-underline-from-center">
                     <a class="nav-link text-light" href="#services">Services</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item hvr-underline-from-center">
                     <a class="nav-link text-light" href="#portfolio">Portfolio</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item hvr-underline-from-center">
                     <a class="nav-link text-light" href="#contact">Contact</a>
                 </li>
             </ul>
@@ -66,7 +66,7 @@
       <h1 class="text-center">About Me</h1>
       <div class="row mt-4">
           <div class="col-lg-4 col-md-12">
-              <img src="images/me.jpg" class= "imageAboutPage centerMeMobile"alt="A picture of Jordan Hunt">
+              <img src="images/me.jpg" class= "imageAboutPage centerMeMobile rounded"alt="A picture of Jordan Hunt">
           </div>
 
           <div class="col-lg-8">
@@ -188,8 +188,8 @@
               <div class="card servicesText">
                   <div class="card-body">
                       <i class='servicesIcon fas fa-graduation-cap'></i>
-                      <h4 class="card-title mt-3">Versitility</h4>
-                      <p class="card-text mt-3">Through my education and professional experience I have a large toolkit at my disposal to solve problems.  
+                      <h4 class="card-title mt-3">Problem Solving</h4>
+                      <p class="card-text mt-3">I have a large toolkit at my disposal to solve problems. Through my education and professional experience I have demonstrated my ability to effectively solve problems.  
                       </p>
                   </div>
               </div>  
