--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   <div class="container">
       <h1 class="text-center">Skills</h1>
       <div class="row">
-          <div class="col-lg-4 mt-4">
+          <div class="col-lg-4 mt-4 cards">
               <div class="card servicesText">
                   <div class="card-body">
                       <i class="fas servicesIcon fa-clock"></i>
@@ -173,7 +173,7 @@
                   </div>
               </div>  
           </div>
-          <div class="col-lg-4 mt-4">
+          <div class="col-lg-4 mt-4 cards">
               <div class="card servicesText">
                   <div class="card-body">
                       <i class='fas servicesIcon fa-layer-group'></i>
@@ -184,7 +184,7 @@
               </div>  
           </div>
 
-          <div class="col-lg-4 mt-4">
+          <div class="col-lg-4 mt-4 cards">
               <div class="card servicesText">
                   <div class="card-body">
                       <i class='servicesIcon fas fa-graduation-cap'></i>
@@ -197,7 +197,7 @@
       </div>
 
       <div class="row">
-          <div class="col-lg-4 mt-4">
+          <div class="col-lg-4 mt-4 cards">
               <div class="card servicesText">
                   <div class="card-body">
                       <i class='servicesIcon fas fa-comments'></i>
@@ -209,7 +209,7 @@
               </div>  
           </div>
 
-          <div class="col-lg-4 mt-4">
+          <div class="col-lg-4 mt-4 cards">
               <div class="card servicesText">
                   <div class="card-body">
                       <i class='servicesIcon fa fa-suitcase'></i>
@@ -220,7 +220,7 @@
               </div>  
           </div>
 
-          <div class="col-lg-4 mt-4">
+          <div class="col-lg-4 mt-4 cards">
               <div class="card servicesText">
                   <div class="card-body">
                       <i class='fas servicesIcon fa-wrench'></i>
@@ -239,7 +239,7 @@
   <div class="container mt-3">
       <h1 class="text-center">Portfolio</h1>
       <div class="row">
-          <div class="col-lg-4 mt-4">
+          <div class="col-lg-4 mt-4 cards">
               <div class="card">
                   <img class="card-img-top" src="images/portfolioImage1.jpg" alt="Card image" style="width:100%">
                   <div class="card-body">
@@ -252,7 +252,7 @@
               </div>
           </div>
 
-          <div class="col-lg-4 mt-4">
+          <div class="col-lg-4 mt-4 cards">
               <div class="card portfolioContent">
                   <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
                   <div class="card-body">
@@ -280,7 +280,7 @@
       </div>
       <br>
       <div class="row">
-          <div class="col-lg-4 mt-4">
+          <div class="col-lg-4 mt-4 cards">
               <div class="card portfolioContent">
                   <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
                   <div class="card-body">
@@ -293,7 +293,7 @@
               </div>
           </div>
 
-          <div class="col-lg-4 mt-4" >
+          <div class="col-lg-4 mt-4 cards" >
               <div class="card portfolioContent" id="privateClient">
                   <img class="card-img-top" src="images/mvcApp.jpg" alt="Card image" style="width:100%">
                   <div class="card-body">
@@ -306,7 +306,7 @@
               </div>
           </div>
 
-          <div class="col-lg-4 mt-4">
+          <div class="col-lg-4 mt-4 cards">
               <div class="card portfolioContent">
                   <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
                   <div class="card-body">
