updated about me list info

--- a/index.html
+++ b/index.html
@@ -62,42 +62,42 @@
 
 <!-- about section-->
 <section id="about">
-  <div class="container mt-4 pt-4">
-      <h1 class="text-center">About Me</h1>
-      <div class="row mt-4">
-          <div class="col-lg-4 col-md-12">
-              <img src="images/me.jpg" class= "imageAboutPage centerMeMobile rounded"alt="A picture of Jordan Hunt">
-          </div>
-
-          <div class="col-lg-8">
-              <div class="row mt-3">
-                  <div class="col-md-6">
-                      <ul>
-                          <li>Name: Jordan Hunt</li>
-                          <li>Age: 34</li>
-
-
-                      </ul>
-                  </div>
-                  <div class="col-md-6">
-                      <ul>
-                          <li>Location: Niagara Region</li>
-                          <li>Occupation: Developer</li>
-                      </ul>
-                  </div>
-              </div>
-              <div class="row mt-3">
-                  <p> I spent many years with a successful career in retail management. 
-                    During the pandemic the line of work changed drastically and I decided it was time for me to make a career change. 
-                    Computers have always been a big interest and hobby for me. I have always been interested in how things work. 
-                    When MySpace was the big social media thing I found myself digging in to figure out how to have the coolest looking profile possible (I was really cool). 
-                    After graduating from college the first time I spent many years managing hardware & software repair businesses. 
-                    I believe with my work experience and knowledge I have a unique perspective and would be an asset to any team or project you may have.
-                  </p>
-              </div>
-          </div>
-      </div>
-</section>
+    <div class="container mt-4 pt-4">
+        <h1 class="text-center">About Me</h1>
+        <div class="row mt-4">
+            <div class="col-lg-4 col-md-12">
+                <img src="images/me.jpg" class="imageAboutPage centerMeMobile rounded" alt="A picture of Jordan Hunt">
+            </div>
+  
+            <div class="col-lg-8">
+                <div class="row mt-3">
+                    <div class="col-md-6">
+                        <ul class="list-group">
+                            <li class="list-group-item"><strong>Name:</strong> Jordan Hunt</li>
+                            <li class="list-group-item"><strong>Age:</strong> 34</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6">
+                        <ul class="list-group">
+                            <li class="list-group-item"><strong>Location:</strong> Niagara Region</li>
+                            <li class="list-group-item"><strong>Occupation:</strong> Developer</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <p> I spent many years with a successful career in retail management. 
+                      During the pandemic, the line of work changed drastically, and I decided it was time for me to make a career change. 
+                      Computers have always been a big interest and hobby for me. I have always been interested in how things work. 
+                      When MySpace was the big social media thing, I found myself digging in to figure out how to have the coolest looking profile possible (I was really cool). 
+                      After graduating from college the first time, I spent many years managing hardware & software repair businesses. 
+                      I believe with my work experience and knowledge, I have a unique perspective and would be an asset to any team or project you may have.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+  </section>
+  
 
 <!-- languages section-->
 <section id="languages">
