Changed Services to Skills

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a class="nav-link text-light" href="#languages">Languages</a>
                 </li>
                 <li class="nav-item hvr-underline-from-center">
-                    <a class="nav-link text-light" href="#services">Services</a>
+                    <a class="nav-link text-light" href="#skills">Skills</a>
                 </li>
                 <li class="nav-item hvr-underline-from-center">
                     <a class="nav-link text-light" href="#portfolio">Portfolio</a>
@@ -159,7 +159,7 @@
     </div>
   </section>
 <!-- services section-->
-<section id="services">
+<section id="skills">
   <div class="container">
       <h1 class="text-center">Skills</h1>
       <div class="row">
