--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                     <img class="card-img-top" src="images/shoppinglist.jpg" alt="Card image" style="width:100%">
                     <div class="card-body">
                         <h4 class="card-title">Shopping List App</h4>
-                        <p class="card-text">My wife and I were having trouble communicating our shopping list.  I made an app that uses Firebase for the server side.  HTML, CSS and JS were used for this project.  It is accessible by web as well as by on our mobile device as it is mobile friendly.  You type what you want in and add it to the list, and tap to delete.</p>
+                        <p class="card-text">My wife and I were having trouble communicating our shopping list.  I made an app that uses Firebase for the server side.  HTML, CSS and JS were used for this project.  It is accessible by web as well as on our mobile device as it is mobile friendly.  You type what you want in and add it to the list, and tap to delete.</p>
                         <div class="text-center">
                             <a href="https://github.com/johunt89/Firebase-Shopping-List-App" class="btn btn-success">See repository</a>
                         </div>
